tests/baselines/reference/aliasUsageInObjectLiteral.errors.txt
aliasUsageInObjectLiteral_backbone.ts(2,12): error TS2564: Property 'someData' has no initializer and is not definitely assigned in the constructor.


==== aliasUsageInObjectLiteral_main.ts (0 errors) ====
    import Backbone = require("./aliasUsageInObjectLiteral_backbone");
    import moduleA = require("./aliasUsageInObjectLiteral_moduleA");
    interface IHasVisualizationModel {
        VisualizationModel: typeof Backbone.Model;
    }
    var a: { x: typeof moduleA } = { x: moduleA };
    var b: { x: IHasVisualizationModel } = { x: moduleA };
    var c: { y: { z: IHasVisualizationModel } } = { y: { z: moduleA } };
==== aliasUsageInObjectLiteral_backbone.ts (1 errors) ====
    export class Model {
        public someData: string;
               ~~~~~~~~
!!! error TS2564: Property 'someData' has no initializer and is not definitely assigned in the constructor.
    }
    
==== aliasUsageInObjectLiteral_moduleA.ts (0 errors) ====
    import Backbone = require("./aliasUsageInObjectLiteral_backbone");
    export class VisualizationModel extends Backbone.Model {
        // interesting stuff here
    }
    